--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,7 +101,7 @@
         android:layout_above="@id/board"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="8sp"
-        android:text="@string/x_turn"
+        android:text="Who's turn"
         android:textColor="@color/textColor"
         android:textSize="30sp" />
 
